# aiohifiberry

./: .gitignore  LICENSE  README.md  pyproject.toml
aiohifiberry/: __init__.py  client.py
tests/: test_client.py
