[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiohifiberry"
version = "0.1.0"
description = "Async client for the HiFiBerry OS / HBOS NG AudioControl REST API"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Will Holdoway" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "aiohttp>=3.9.0",
]

[project.urls]
Homepage = "https://github.com/willholdoway/aiohifiberry"
Issues = "https://github.com/willholdoway/aiohifiberry/issues"
